--- a/react-app/src/components/AudiModel.scss
+++ b/react-app/src/components/AudiModel.scss
@@ -8,13 +8,13 @@ it.
 */
 @import '../styles/variables';
 
-$adventureItemWidth: 240px;
-$adventureItemHeight: 200px;
+$audiModelItemWidth: 240px;
+$audiModelItemHeight: 200px;
 
-$adventureItemWidthMobile: 300px;
-$adventureItemHeightMobile: 250px;
+$audiModelItemWidthMobile: 300px;
+$audiModelItemHeightMobile: 250px;
 
-.adventure-items {
+.audiModel-items {
   display: flex;
   list-style: none;
   margin-top: 1em;
@@ -25,55 +25,55 @@ $adventureItemHeightMobile: 250px;
   justify-content: normal;
 }
 
-.adventure-item {
-  flex-basis: $adventureItemWidth;
+.audiModel-item {
+  flex-basis: $audiModelItemWidth;
   margin: 0 0 2rem;
   padding-right: 14px;
 }
   
-.adventure-item-image {
+.audiModel-item-image {
   width: 100%;
-  height: $adventureItemHeight;
+  height: $audiModelItemHeight;
   object-fit: cover;
   object-position: center;
   overflow: hidden;
   margin-bottom: 7px;
 }
   
-  .adventure-item-title {
+  .audiModel-item-title {
     font-weight: bold;
     font-size: $font-size-medium;
     margin-bottom: 5px;
     text-transform: uppercase;
   }
   
-  .adventure-item-length-price {
+  .audiModel-item-length-price {
     width: 100%;
     height: 20px;
   }
   
-  .adventure-item-length {
+  .audiModel-item-length {
     float: left;
   }
   
-  .adventure-item-price {
+  .audiModel-item-price {
     float: right;
   }
 
   @media only screen and (max-width: $tablet-breakpoint) {
-    .adventure-items {
+    .audiModel-items {
       justify-content: normal;
     }
-    .adventure-item {
-      flex-basis: $adventureItemWidthMobile;
+    .audiModel-item {
+      flex-basis: $audiModelItemWidthMobile;
     }
-    .adventure-item-image {
-      height: $adventureItemHeightMobile;
+    .audiModel-item-image {
+      height: $audiModelItemHeightMobile;
     }
   }
 
   @media only screen and (max-width: $mobile-breakpoint) {
-    .adventure-items {
+    .audiModel-items {
       justify-content: center;
     }
   }
